--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ nav a:hover {
   background-color: #ddd;
 }
 footer {
+  margin-top: 50px;
   background-color: #333;
   color: #fff;
   padding: 10px;
@@ -32,9 +33,18 @@ footer {
   width: 100%;
 }
 .cards-container {
-  margin: 100px;
+  margin: 1rem;
 }
 .cards-container .MuiGrid-root.MuiGrid-container {
   display: flex;
   align-items: center;
+}
+
+button {
+  min-width: 50px;
+  min-height: 50px;
+}
+
+table {
+  margin-bottom: 150px;
 }
